# openpose_ros

./: CMakeLists.txt  README.md
src/: openpose_ros_client.cpp
